# hdx-scraper-unhcr-situations

./: README.md  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  run.py  unhcr_situations.py
.github/workflows/: publish.yaml  run-python-script.yaml
config/: hdx_dataset_static.yaml  project_configuration.yaml
src/hdx/scraper/unhcr_situations/: __main__.py  unhcr_situations.py
src/hdx/scraper/unhcr_situations/config/: hdx_dataset_static.yaml  project_configuration.yaml
tests/: conftest.py  test_unhcr_situations.py
tests/fixtures/: download-unhcr-situations.csv  get-origin-geo-id-220-population-collection-429.json  get-origin-geo-id-259-population-collection-429.json  get-origin-geo-id-295-population-collection-429.json  get-sublocation-sv-id-45-population-collection-42981.json  get-sublocation-sv-id-47-population-collection-42981.json  get-sublocation-sv-id-48-population-collection-42981.json  get-sublocation-sv-id-51-population-collection-42981.json  unhcr-situations.csv  unhcr-situations.json
tests/fixtures/input/: dataset-unhcr-situations.json  download-unhcr-situations.csv  get-origin-geo-id-220-population-collection-429.json  get-origin-geo-id-259-population-collection-429.json  get-origin-geo-id-295-population-collection-429.json
