#########################
# Project Configuration #
#########################

# Project name and version needed to run tests

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hdx-scraper-unhcr_situations"
requires-python = ">=3.12"
dependencies = [
  "hdx-python-api",
  "hdx-python-utilities",
]

dynamic = ["version"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov"
]
dev = ["pre-commit"]

[project.scripts]
run = "hdx.scraper.unhcr_situations.__main__:main"
